[package]
name = "oasert"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
jsonschema = "0.30.0"
serde_json = "1.0.140"
unicase = "2.8.1"
dashmap = "7.0.0-rc2"
log = "0.4.27"

[dev-dependencies]
memory-stats = "1.2.0"
#criterion = "0.5.1"
#
#[[bench]]
#name = "validate_benchmarks"
#harness = false


