[package]
name = "oasert"
version = "0.1.0"
authors = ["Kalev Gonvick kalev.gonvick@idemio.dev"]
edition = "2024"
repository = "https://github.com/idemio/OASert"
license = "Apache-2.0"
readme = "README.md"

description = "A library for verifying in-flight requests against a provided OpenAPI 3.1.x or 3.0.x specification."
keywords = ["oas", "openapi", "specification", "verification", "security"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
jsonschema = "0.30.0"
serde_json = "1.0.140"
unicase = "2.8.1"
dashmap = "7.0.0-rc2"
log = "0.4.27"
serde = "1.0.219"


